# CakilganCore

./: .gitignore  CMakeLists.txt  README.md  main.cpp  results.json  tokens.txt
include/: color_utils.h  logic_utils.h  math_utils.h  string_utils.h  test_utils.h  time_utils.h  token_utils.h
src/: token_utils.cpp
